# Code-JEPA

./: .dockerignore  .env.example  .gitignore  Ablations.md  CLAUDE.md  Project.md  README.md  Work.md  acl_latex.tex  pyproject.toml
docs/: discoverer-small-unixcoder-runbook.md  offline-small-unixcoder-benchmarks.md
scripts/: augment_harder_triples.py  download_codexglue_benchmarks.py  evaluate_clone_detection.py  evaluate_codesearchnet_retrieval.py  finetune_clone_benchmarks.py  finetune_clone_benchmarks_jax.py  inspect_small_unixcoder.py  mock_lejepa_roberta_code.py  prepare_codeparrot_python.py  prepare_codesearchnet_python.py  prepare_data.py  pretrain_lejepa_roberta_two_heads.py  profile_siamese_bpe_jepa.py  run_equal_finetuning.sh  run_equal_pretraining.sh  run_raw_unixcoder_pretraining.sh  run_small_code_jepa_experiment.ps1  show_logs.sh  stage_offline_assets_from_s3.ps1  tokenize_dataset_segments.py  tokenize_jepa_triples.py  train_code_bpe_tokenizer.py  train_codebert_jepa_torch.py  train_siamese_bpe_jepa.py  train_siamese_bpe_jepa_jax.py  train_siamese_bpe_jepa_multigpu.py  train_siamese_bpe_jepa_torch.py  train_small_unixcoder_raw.py  train_tiny_jepa_jax.py
slurm/: control-pretrain.sh  equal-finetune.sh  equal-pretrain.sh  finetune-codejepa-rw015.sh  finetune-codejepa-v2.sh  finetune-codejepa.sh  finetune-raw-unixcoder-vs-codejepa.sh  finetune-siamese-jax.sh  finetune-unixcoder-v2.sh  finetune-unixcoder.sh  jepa-pretrain.sh  pretrain-codejepa-rw015.sh  pretrain-codejepa-v2.sh  pretrain-codejepa.sh  pretrain-siamese-jax-multigpu.sh  pretrain-unixcoder-raw.sh  (+7 more)
(+65 files in other folders)
