[project]
name = "code-jepa"
version = "0.0.0"
description = "Hard-negative-sensitive JEPA representations for code."
requires-python = ">=3.10"
dependencies = [
  "datasets",
  "pyarrow",
  "pandas",
  "tqdm",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]
models = ["torch", "transformers"]
transforms = ["black", "libcst", "tree-sitter"]
train = ["jax", "flax", "optax", "numpy"]
benchmarks = ["gdown"]

[tool.ruff]
line-length = 100
src = ["src", "scripts", "tests"]
